--- a/views/admin.jade
+++ b/views/admin.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1= title
-  p Welcome to the simple vulnerable Node.js site with Express and MongoDB
+  p This is the richest bank
 
   // Wrapper
   #wrapper
