--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,83 +1,55 @@
 body {
 	padding: 30px;
 	font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
-
-h2 {
+}h2 {
 	margin: 0 0 .5em 0;
-}
-
-a {
+}a {
 	color: #00B7FF;
-}
-
-#wrapper {
+}#wrapper {
 	padding-left: 312px;
 	position: relative;
-}
-
-.userList {
+}.userList {
 	margin: 0 0 30px 0;
-}
-
-.userList table {
+}.userList table {
 	border-collapse: separate;
 	border-spacing: 1px;
 	background: #CCC;
-}
-
-.userList table th {
+}.userList table th {
 	background: #EEE;
 	font-weight: 600;
 	padding: 10px 20px;
 	text-align: center;
-}
-
-.userList table tbody {
+}.userList table tbody {
 	padding: 0;
 	margin: 0;
 	border-collapse: collapse;
 	border-spacing: 0px;
-}
-
-.userList table td {
+}.userList table td {
 	background: #FFF;
 	padding: 5px 10px;
 	text-align: center;
-}
-
-#userInfo {
+}#userInfo {
 	width: 250px;
 	position: absolute;
 	top: 0;
 	left: 0;
-}
-
-#userInfo p {
+}#userInfo p {
 	padding: 15px;
 	border: 1px solid #CCC;
 	background: rgba(80, 120, 255, 0.05);
-}
-
-fieldset {
+}fieldset {
 	border: 0;
 	padding: 0;
 	margin: 0;
-}
-
-#menu {
+}#menu {
 	width: 330px;
 	position: absolute;
 	top: 0;
 	left: 0;
-}
-
-#menu p {
+}#menu p {
 	padding: 15px;
 	border: 1px solid #CCC;
 	background: rgba(80, 120, 255, 0.05);
-}
-
-#order {
+}#order {
 	padding-left: 50px;
 }
