--- a/public/stylesheets/tooltip.css
+++ b/public/stylesheets/tooltip.css
@@ -4,9 +4,7 @@
     display: inline-block;
     cursor: help;
     /* If you want dots under the hoverable text */
-}
-
-/* Tooltip text */
+}/* Tooltip text */
 .tooltip .tooltiptext {
     visibility: hidden;
     width: 150px;
@@ -20,20 +18,14 @@
     /* Position the tooltip text - see examples below! */
     position: absolute;
     z-index: 1;
-}
-
-/* Show the tooltip text when you mouse over the tooltip container */
+}/* Show the tooltip text when you mouse over the tooltip container */
 .tooltip:hover .tooltiptext {
     visibility: visible;
-}
-
-/* move tooltip to the right */
+}/* move tooltip to the right */
 .tooltip .tooltiptext {
     top: -10px;
     left: 105%;
-}
-
-/* add arrow */
+}/* add arrow */
 .tooltip .tooltiptext::after {
     content: " ";
     position: absolute;
@@ -44,14 +36,10 @@
     border-width: 5px;
     border-style: solid;
     border-color: transparent #f6abb6 transparent transparent;
-}
-
-/* add animation */
+}/* add animation */
 .tooltip .tooltiptext {
     opacity: 0;
     transition: opacity 1s;
-}
-
-.tooltip:hover .tooltiptext {
+}.tooltip:hover .tooltiptext {
     opacity: 1;
 }
